# LearnOpenGL-CLion

./: CMakeLists.txt  main.cpp
glfw/src/: CMakeLists.txt
includes/: stb_image.h
includes/learnopengl/: filesystem.h  shader.h
src/: main.cpp  shader.frag  shader.vert
